--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,9 @@ jobs:
 
 
       - name: Install dependencies
+      - uses: actions/setup-node@v4
+        with:
+          node-version: "22"
       
       - run: cd apps/web ; npm run build
         name: Build
