ci: Incorrect syntax

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
 
 
       - name: Install dependencies
-      - uses: actions/setup-node@v4
+        uses: actions/setup-node@v4
         with:
           node-version: "22"
       
